[gd_scene load_steps=8 format=3 uid="uid://cqqsuwfjd8o7x"]

[ext_resource type="Texture2D" uid="uid://dlcwnvecof65r" path="res://assets/images/backgrounds/Credits.png" id="1_dcybn"]
[ext_resource type="FontFile" uid="uid://8rllcomrvwxd" path="res://assets/fonts/robot-9000-font/Robot9000-MVxZx.ttf" id="2_1huop"]
[ext_resource type="AudioStream" uid="uid://cbuyjeeoa40uv" path="res://assets/sounds/music/End - Azakaela - Tumbleweeds.mp3" id="2_5253l"]
[ext_resource type="Script" path="res://scenes/CreditsScrollContainer.gd" id="2_btmwd"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7f0ir"]
bg_color = Color(0.180392, 0.180392, 0.180392, 0.588235)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ndfe1"]
bg_color = Color(0.6, 0.6, 0.6, 0.392157)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gtqbd"]
bg_color = Color(0.117647, 0.117647, 0.117647, 0.784314)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="Credits" type="Node2D"]

[node name="BackgroundImage" type="TextureRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("1_dcybn")
expand_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0

[node name="ContentsContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="CreditsScrollContainer" type="ScrollContainer" parent="MarginContainer/ContentsContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0
script = ExtResource("2_btmwd")

[node name="CreditsText" type="RichTextLabel" parent="MarginContainer/ContentsContainer/CreditsScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/normal_font = ExtResource("2_1huop")
theme_override_font_sizes/normal_font_size = 64
bbcode_enabled = true
text = "[center]Robot Escape
A game by Dalia and Layne (moogleknight)

Programming
Dalia and Layne (moogleknight)

Art Design
Dalia and Layne (moogleknight)

Music Design
Dalia and Layne (moogleknight)

SFX Design
Dalia and Layne (moogleknight)

Testing
Dalia and Layne (moogleknight)

Assets Used

Art

Robot with Gun Animation
alisdaiross (itch.io)

Icons Essential Pack
Crusenho (itch.io)
CC 4.0

Cyberpunk Backgrounds
Lornn (itch.io)

Sci-Fi Labs Tileset
Foozle (itch.io)
CC 0

Industrial Parallax Background
ansimuz (itch.io)

Warped City Backgrounds 1
ansimuz (itch.io)

Generic Dungeon Pack
bakudas / Est√∫dio Vaca Roxa (itch.io)
CC 0

Pixel Trap Pack
Foozle (itch.io)
CC 0

SunnyLand Forest of Illusion
ansimuz (itch.io)

Music

At My Fingertips
Aza's Free Music Pack 2 Wild West of Another World
Azakaela (itch.io)
CC 4.0

Containment Breach
Aza's Free Music Pack 2 Wild West of Another World
Azakaela (itch.io)
CC 4.0

Atmospheric Jungle Tool
VGM Soundtrack Library Vol. 1
sepha (itch.io)
CC 4.0

Fire on Board
Far-Out: OST
Escapism Softworks (itch.io)

Another World
Aza's Free Music Pack 2 Wild West of Another World
Azakaela (itch.io)
CC 4.0

Tumbleweeds
Aza's Free Music Pack 2 Wild West of Another World
Azakaela (itch.io)
CC 4.0

SFX

300+ Futuristic SFX
GameSupplyGuy (itch.io)

Fonts

Robot 9000 Font
Darrell Flood (fontspace.com)

Developed in Godot 4
In March 2023 for a game jam
Indie Game Dev Beginners #003 (itch.io)







Thank you for playing our game :)






[/center]"
fit_content = true
scroll_active = false
threaded = true

[node name="ScrollTimer" type="Timer" parent="MarginContainer/ContentsContainer/CreditsScrollContainer"]
wait_time = 0.1

[node name="ButtonContainer" type="VBoxContainer" parent="MarginContainer/ContentsContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/ContentsContainer/ButtonContainer"]
layout_mode = 2
theme_override_constants/margin_left = 500
theme_override_constants/margin_right = 500

[node name="ExitButton" type="Button" parent="MarginContainer/ContentsContainer/ButtonContainer/MarginContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_1huop")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_7f0ir")
theme_override_styles/hover = SubResource("StyleBoxFlat_ndfe1")
theme_override_styles/pressed = SubResource("StyleBoxFlat_gtqbd")
text = "Exit to Main Menu"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_5253l")
autoplay = true

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[connection signal="timeout" from="MarginContainer/ContentsContainer/CreditsScrollContainer/ScrollTimer" to="MarginContainer/ContentsContainer/CreditsScrollContainer" method="_on_scroll_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="MarginContainer/ContentsContainer/CreditsScrollContainer" method="_on_start_timer_timeout"]
